Quick Overflow Fix

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -11,10 +11,14 @@ html {
     background-color: black;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 #background {
     z-index: -1;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     overflow: hidden;
 }
